--- a/styles/style.css
+++ b/styles/style.css
@@ -10,13 +10,13 @@ body {
     background-position: center, top, bottom;
     background-repeat: no-repeat;
     height: 100vh;
+    font-family:"Imprint MT Shadow", sans-serif;
 }
 
 .hero {
     width: 100%;
     height: 100vh;
     position: relative;
-    padding: flex;
     align-items: center;
 }
 
@@ -32,22 +32,22 @@ body {
 
 .container-desc {
     position: absolute;
-
     width: 45%;
     height: fit-content;
     left: 8%;
     top: 0;
-    bottom: 0;
+    bottom: 15%;
     margin: auto;
 }
 
     .container-desc h1 {
-        font-size: 48px;
+        font-size: 64px;
+        font-family: "Lucida Handwriting", sans-serif;
     }
 
     .container-desc p {
-        font-size: 20px;
-        text-space: 5px;
+        font-size: 24px;
+        line-height: 30px;
     }
 
     .container-corner-tr {
@@ -80,6 +80,7 @@ body {
     }
 
     .container-picparent {
+        padding-right: 20px;
         position: absolute;
         display: flex;
         flex-direction: row;
@@ -88,24 +89,63 @@ body {
     }
 
     .container-picchild {
+        text-decoration: none;
+        transition: 0.5s;
         padding: 10px;
         border: 90px;
     }
 
-    nav {
+.container-picchild:hover {
+    transition: 0.5s;
+    cursor: pointer;
+    padding: 10px;
+    border: 90px;
+    margin-top: -20px;
+    color: #d6d6d6;
+}
+.container-picchild img {
+    height: 425px;
+}
 
-        width: 380px;
+.container-picchild img:hover {
+    filter: blur(1px);
+}
+
+.centered {
+    font-family: "Lucida Handwriting", sans-serif;
+    color: #fff;
+    filter: drop-shadow(4px 4px 4px black);
+    font-size: 20px;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    bottom: 20%;
+    justify-content: center;
+}
+
+
+    nav {
+        color: black;
+        width: 500px;
         height: auto;
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
-        justify-content: space-between;
+
     }
 
     nav h1 {
-        text-decoration: none;
+        font-family: Impact, fantasy;
     }
 
+nav p {
+
+    font-weight: bold;
+    font-size: 20px;
+}
+
     .menu {
+        cursor: pointer;
         padding: 5px;
     }
 
@@ -125,4 +165,6 @@ body {
             opacity: 1;
         }
     }
-}
+
+
+
