--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ body {
     background-position: center, top, bottom;
     background-repeat: no-repeat;
     height: 100vh;
-    font-family:"Imprint MT Shadow", sans-serif;
+    font-family: KiteOne, sans-serif;
 }
 
 .hero {
@@ -32,16 +32,16 @@ body {
 
 .container-desc {
     position: absolute;
-    width: 45%;
+    width: 40%;
     height: fit-content;
-    left: 8%;
+    left: 14%;
     top: 0;
     bottom: 15%;
     margin: auto;
 }
 
     .container-desc h1 {
-        font-size: 64px;
+        font-size: 54px;
         font-family: "Lucida Handwriting", sans-serif;
     }
 
